--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -79,7 +79,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/Sanjeeb-s-Blogs-Bootstrap-/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
