--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       style="background-color: rgb(40 10 60)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/">Sanjeeb's Blogs</a>
+        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/#">Sanjeeb's Blogs</a>
         <button
           class="navbar-toggler"
           type="button"
