--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       style="background-color: rgb(40 10 60)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/">Sanjeeb's Blogs</a>
+        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/" disabled>Sanjeeb's Blogs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
+              <a class="nav-link" aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
@@ -79,7 +79,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Sanjeeb-s-Blogs-Bootstrap-/contact.html">Contact</a>
+              <a class="nav-link active" href="/Sanjeeb-s-Blogs-Bootstrap-/contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
