--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
               <a aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/" disabled>Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
+              <a class="nav-link active" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
