--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       style="background-color: rgb(40 10 60)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/#">Sanjeeb's Blogs</a>
+        <a class="navbar-brand" href="/Sanjeeb-s-Blogs-Bootstrap-/">Sanjeeb's Blogs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/" disabled>Home</a>
+              <a aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
