--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Sanjeeb-s-Blogs-Bootstrap-/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/Sanjeeb-s-Blogs-Bootstrap-/about.html">About</a>
