--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
         <form>
             <div class="col-md-4 mb-3">
               <label for="validationCustom01">First name</label>
-              <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
+              <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="" required>
               <div class="valid-feedback">
                 Looks good!
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <label for="validationCustom02">Last name</label>
-              <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
+              <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="" required>
               <div class="valid-feedback">
                 Looks good!
               </div>
